k8s/pingdatagovernance.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingdatagovernance
  name: pingdatagovernance
spec:
  ports:
  - name: https
    port: 3443
    targetPort: 443
  - name: ldaps
    port: 636
    targetPort: 636
  selector:
    role: pingdatagovernance
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: pingdatagovernance
  name: pingdatagovernance
spec:
  replicas: 1
  selector:
    matchLabels:
      role: pingdatagovernance
  template:
    metadata:
      labels:
        role: pingdatagovernance
      name: pingdatagovernance
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: shared-vars
        - secretRef:
            name: server-profile-url
            optional: true
        - secretRef:
            name: devops-secret
            optional: true
        - configMapRef:
            name: pingdatagovernance-environment-variables
        image: pingidentity/pingdatagovernance:2008-8.1.0.0
        name: pingdatagovernance
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 636
        resources:
          limits:
            cpu: "2"
            memory: 2.5Gi
          requests:
            cpu: "2"
            memory: 2.5Gi
