k8s/pingdatagovernancepap.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingdatagovernancepap
  name: pingdatapap
spec:
  ports:
  - name: https
    port: 9443
  selector:
    role: pingdatagovernancepap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: pingdatagovernancepap
  name: pingdatagovernancepap
spec:
  replicas: 1
  selector:
    matchLabels:
      role: pingdatagovernancepap
  template:
    metadata:
      labels:
        role: pingdatagovernancepap
      name: pingdatagovernancepap
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: shared-vars
        - secretRef:
            name: server-profile-url
            optional: true
        - secretRef:
            name: devops-secret
            optional: true
        - configMapRef:
            name: pingdatagovernancepap-environment-variables
        image: pingidentity/pingdatagovernancepap:2008-8.1.0.0
        name: pingdatagovernancepap
        ports:
        - containerPort: 9443
        resources:
          limits:
            cpu: "2"
            memory: 2.5Gi
          requests:
            cpu: "2"
            memory: 2.5Gi

# ---

# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   annotations:
#     kubernetes.io/ingress.class: nginx-public
#     nginx.ingress.kubernetes.io/backend-protocol: HTTPS
#   labels:
#     role: pingdatagovernancepap
#   name: pingdatagovernancepap
# spec:
#   rules:
#   - host: pingdatagovernancepap.${PING_IDENTITY_DEVOPS_DNS_ZONE}
#     http:
#       paths:
#       - backend:
#           serviceName: pingdatagovernancepap
#           servicePort: 9443
#         path: /
#   tls:
#   - hosts:
#     - pingdatagovernancepap.${PING_IDENTITY_DEVOPS_DNS_ZONE}
#     secretName: tls-secret
