k8s/pingdirectory.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingdirectory
  name: pingdirectory
spec:
  clusterIP: None
  ports:
  - name: ldaps
    port: 636
    targetPort: 1636
  - name: ssl
    port: 443
    targetPort: 1443
  - name: consent
    port: 2443
    targetPort: 2443
  - name: ldap
    port: 389
    targetPort: 389
  selector:
    role: pingdirectory

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    role: pingdirectory
  name: pingdirectory
spec:
  replicas: 1
  selector:
    matchLabels:
      role: pingdirectory
  serviceName: pingdirectory
  template:
    metadata:
      labels:
        role: pingdirectory
      name: pingdirectory
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: shared-vars
        - secretRef:
            name: server-profile-url
            optional: false
        - secretRef:
            name: devops-secret
            optional: true
        - configMapRef:
            name: pingdirectory-environment-variables
        image: pingidentity/pingdirectory:2012-8.2.0.0
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - /preStop.sh
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /opt/liveness.sh
          initialDelaySeconds: 300
          periodSeconds: 30
        name: pingdirectory
        ports:
        - containerPort: 636
        - containerPort: 443
        - containerPort: 2443
        - containerPort: 389
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - /opt/liveness.sh
        resources:
          limits:
            cpu: "4"
            memory: 8Gi
          requests:
            cpu: "4"
            memory: 8Gi
        volumeMounts:
        - mountPath: /opt/out
          name: out-dir
        - name: pingdirectory-license
          mountPath: "/opt/in/pd.profile/server-root/pre-setup/PingDirectory.lic"
          subPath: PingDirectory.lic
          readOnly: true
      terminationGracePeriodSeconds: 300
      volumes:
      - name: out-dir
        persistentVolumeClaim:
          claimName: out-dir
      - name: pingdirectory-license
        secret:
          secretName: pingdirectory-license
  volumeClaimTemplates:
  - metadata:
      name: out-dir
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 20Gi
      storageClassName: gp2
