k8s/pingfederate.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingfederate
  name: pingfederate
spec:
  ports:
  - name: pf-console
    port: 9999
  - name: pf-runtime
    port: 9031
  selector:
    role: pingfederate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: pingfederate
  name: pingfederate
spec:
  replicas: 1
  selector:
    matchLabels:
      role: pingfederate
  template:
    metadata:
      labels:
        role: pingfederate
      name: pingfederate
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: shared-vars
        - secretRef:
            name: server-profile-url
            optional: false
        - secretRef:
            name: devops-secret
            optional: true
        - configMapRef:
            name: pingfederate-environment-variables
        image: pingidentity/pingfederate:2012-10.2.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /pingfederate/app
            port: 9999
            scheme: HTTPS
          initialDelaySeconds: 100
          periodSeconds: 1
        name: pingfederate
        ports:
        - containerPort: 9999
        - containerPort: 9031
        readinessProbe:
          httpGet:
            path: /pingfederate/app
            port: 9999
            scheme: HTTPS
          periodSeconds: 10
        resources:
          limits:
            cpu: "2"
            memory: 2.5Gi
          requests:
            cpu: "1"
            memory: 2.5Gi
        volumeMounts:
        - name: pingfederate-license
          mountPath: "/opt/in/instance/server/default/conf/pingfederate.lic"
          subPath: pingfederate.lic
          readOnly: true
      volumes:
      - name: pingfederate-license
        secret:
          secretName: pingfederate-license
