k8s/pingaccess.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingaccess
  name: pingaccess
spec:
  ports:
  - name: pa-admin
    port: 9000
  - name: pa-app
    port: 443 
    targetPort: 3000
  - name: pa-insecure
    port: 8080
    targetPort: 8080
  selector:
    role: pingaccess
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: pingaccess
  name: pingaccess
spec:
  replicas: 1
  selector:
    matchLabels:
      role: pingaccess
  template:
    metadata:
      labels:
        role: pingaccess
      name: pingaccess
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: shared-vars
        - secretRef:
            name: server-profile-url
            optional: true
        - secretRef:
            name: devops-secret
            optional: true
        - configMapRef:
            name: pingaccess-environment-variables
        image: pingidentity/pingaccess:2008-6.1.0
        name: pingaccess
        ports:
        - containerPort: 9000
        - containerPort: 3000
        - containerPort: 8080
        resources:
          limits:
            cpu: "2"
            memory: 2.5Gi
          requests:
            cpu: "2"
            memory: 2.5Gi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public-passthrough
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    role: pingaccess
  name: pingaccess
spec:
  rules:
  - host: ${PING_IDENTITY_DEVOPS_DNS_ZONE}
    http:
      paths:
      - backend:
          serviceName: pingaccess
          servicePort: 8080
        path: /.well-known/acme-challenge
      - backend:
          serviceName: pingaccess
          servicePort: 443
        path: /
